<resources>
    <string name="app_name">Football Update</string>
    <string name="tab_text_1">Last Match</string>
    <string name="tab_text_2">Next Match</string>
    <string name="tab_text_3">Teams</string>

    <string name="tab_text_league_1">Match</string>
    <string name="tab_text_league_2">Standings</string>
    <string name="tab_text_league_3">Teams</string>

    <array name="league_name">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>Scottish Premier League</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
        <item>Greek Superleague Greece</item>
        <item>Dutch Eredivisie</item>
        <item>Belgian Jupiler League</item>
        <item>Turkish Super Lig</item>
        <item>Danish Superliga</item>
        <item>Portuguese Primeira Liga</item>
        <item>American Major League Soccer</item>
        <item>Swedish Allsvenskan</item>
        <item>Mexican Primera League</item>
        <item>Brazilian Brasileirao</item>
        <item>Ukrainian Premier League</item>
        <item>Russian Football Premier League</item>
        <item>Australian A-League</item>
        <item>Eliteserien</item>
        <item>Chinese Super League</item>
    </array>

    <array name="league_id">
        <item>4328</item>
        <item>4329</item>
        <item>4330</item>
        <item>4331</item>
        <item>4332</item>
        <item>4334</item>
        <item>4335</item>
        <item>4336</item>
        <item>4337</item>
        <item>4338</item>
        <item>4339</item>
        <item>4340</item>
        <item>4344</item>
        <item>4346</item>
        <item>4347</item>
        <item>4350</item>
        <item>4351</item>
        <item>4354</item>
        <item>4355</item>
        <item>4356</item>
        <item>4358</item>
        <item>4359</item>
    </array>

    <array name="league_badge">
        <item>https://www.thesportsdb.com/images/media/league/badge/i6o0kh1549879062.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/m7urjx1535732496.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/vw72bl1534096708.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/0j55yv1534764799.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/ocy2fe1566216901.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/8f5jmf1516458074.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/7onmyv1534768460.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/g5rxbr1517435561.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/ywoi5k1534590331.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/8y3jti1564838854.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/rsgf8z1533755936.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/qeutwx1534768349.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/cplp641535733210.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/dqo6r91549878326.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/bxphar1563728088.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/vsussv1422037333.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/d97d4v1549879038.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/qprvpy1471773025.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/fg0ad21532769374.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/sfhanl1547383730.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/owo80l1512822583.png</item>
        <item>https://www.thesportsdb.com/images/media/league/badge/c7evs21534799383.png</item>
    </array>

    <string name="image_banner">image banner</string>
    <string name="image_badge">image badge</string>
    <string name="search">Cari Pertandingan</string>
    <string name="search_hint">Cari Pertandingan/Tim</string>
    <string name="versus">VS</string>
    <string name="home_team">Home Team</string>
    <string name="_0">-</string>
    <string name="away_team">Away Team</string>
    <string name="goal_scorer">-</string>
    <string name="button_link">Button Link</string>
    <string name="no_data">Tidak Ada Data Ditemukan</string>
    <string name="round">Round </string>
    <string name="date">Date</string>
    <string name="stats">Stats</string>
    <string name="goal">Goal</string>
    <string name="shots">Shots</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>
    <string name="lineup">Lineup</string>
    <string name="goalkeepers">Goalkeepers</string>
    <string name="defenders">Defenders</string>
    <string name="midfielders">Midfielders</string>
    <string name="forwards">Forwards</string>
    <string name="subtitutes">Subtitutes</string>
    <string name="favoriteMatch">Favorite</string>
    <string name="data_not_ready">Data belum siap</string>
    <string name="favorite_added">Berhasil menambahkan ke favorit</string>
    <string name="favorite_removed">Berhasil menghapus dari favorit</string>
    <string name="no_internet">Mohon Periksa Koneksi Internet Anda</string>
    <string name="failed_load_team_badge">Failed to load team badge</string>
    <string name="search_result_for">Hasil pencarian untuk</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>

    <string name="team_name">Team</string>
    <string name="stadium_name">Stadium Name</string>
    <string name="league_name">League Name</string>
    <string name="tab_team_info">Team Info</string>
    <string name="tab_team_player">Player</string>
    <string name="country">Country</string>
    <string name="league">League</string>
    <string name="description">Description</string>
    <string name="stadium">Stadium</string>
    <string name="stadium_desc">Stadium Description</string>
    <string name="favorite">Favorite</string>
    <string name="position">Position:</string>
    <string name="personal_info">Personal Info</string>
    <string name="nationality">Nationality</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_signed">Date Signed</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="match">Match</string>
    <string name="search_result">Hasil Pencarian</string>
    <string name="pos">Pos</string>
    <string name="team">Team</string>
    <string name="play">P</string>
    <string name="win">W</string>
    <string name="draw">D</string>
    <string name="loss">L</string>
    <string name="goal_different">GD</string>
    <string name="points">Pts</string>

</resources>
