...
                            android:layout_marginTop="@dimen/padding"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            app:layout_constraintStart_toEndOf="@id/img_detail_player"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/txt_player_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/tab_team_player"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_marginTop="@dimen/padding"
...
